@@ -1,5 +1,7 @@
 === HEAD
 
+* Add Dataset#paged_each :strategy=>:cursor option in the postgres adapter (jeremyevans)
+
 * Add Dataset#paged_each :strategy=>:filter option for increased performance (jeremyevans)
 
 === 4.8.0 (2014-03-01)
